# sanisizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  arithmetic_8hpp.html  arithmetic_8hpp_source.html  attest_8hpp.html  attest_8hpp_source.html  cap_8hpp.html  cap_8hpp_source.html  cast_8hpp.html  cast_8hpp_source.html  class_8hpp.html  class_8hpp_source.html  classes.html  classsanisizer_1_1Cast-members.html  classsanisizer_1_1Cast.html  classsanisizer_1_1Exact-members.html  classsanisizer_1_1Exact.html  classsanisizer_1_1OverflowError.html  comparisons_8hpp.html  comparisons_8hpp_source.html  create_8hpp.html  create_8hpp_source.html  dir_0a8034aaba84db31794826969fd82345.html  doxygen_crawl.html  files.html  float_8hpp.html  float_8hpp_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacesanisizer.html  nd__offset_8hpp.html  (+18 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  (+4 more)
include/sanisizer/: arithmetic.hpp  attest.hpp  cap.hpp  cast.hpp  class.hpp  comparisons.hpp  create.hpp  float.hpp  nd_offset.hpp  ptrdiff.hpp  sanisizer.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: arithmetic.cpp  attest.cpp  cap.cpp  cast.cpp  class.cpp  comparisons.cpp  create.cpp  float.cpp  nd_offset.cpp  ptrdiff.cpp
